# template_media_player

./: .gitignore  .releaserc  LICENSE.md  NOTICE.md  README.md  hacs.json  pyproject.toml
.github/workflows/: quality.yml  release.yml
custom_components/template_media_player/: __init__.py  const.py  manifest.json  media_player.py
examples/: configuration.yaml  real_configuration.yaml
examples/plex/: configuration.yaml
examples/plex/media_players/: plex_example.yaml
