[tool.poetry]
name = "template-media-player"
version = "0.0.0"
description = ""
authors = ["Lennard Beers <l.beers@outlook.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "custom_components/template_media_player"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
homeassistant = "^2024.10.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
